game updates/bug fixes
added rps preview to index.html slideshow of games

fixed font-family issue of logo being different in rps and tictactoe

fixed tactactoe tile borders not showing up on mobile

added current streak and highscore counter onto tictactoe

--- a/games/rockpaperscissors.css
+++ b/games/rockpaperscissors.css
@@ -1,7 +1,6 @@
 /* main */
 * {
     box-sizing: border-box !important;
-    font-family: 'Chivo', Geneva, Tahoma, sans-serif !important;
 }
 
 html {
@@ -11,6 +10,19 @@ html {
 }
 
 h1 {
+    color: white;
+    text-align: center;
+}
+
+h1, p, div {
+    font-family: 'Chivo', Geneva, Tahoma, sans-serif;
+}
+
+#streak, #highscore {
+    text-decoration-line: underline;
+}
+
+.streak {
     color: white;
     text-align: center;
 }
@@ -57,7 +69,7 @@ h1 {
 
 h1 {
     font-size: 8.5vw;
-    margin-bottom: 5vh;
+    margin-bottom: 3vh;
 }
 
 .optionsContainer {
@@ -80,7 +92,7 @@ h1 {
     justify-content: center;
     align-items: center;
     position: relative;
-    margin: 10vh auto;
+    margin: 5vh auto;
 }
 
 .computer .spinBtn {
